# blonder-tinkham-klapwijk-model

./: .gitignore  README.md  TODO-List.md  pyproject.toml
.github/workflows/: build.yml
src/blonder_tinkham_klapwijk_model/: __init__.py  anisotropic_wave.py  btk_calculation.py  btk_fit.py  fermi_window_for_tunneling.py  input_parameters.toml  isotropic_wave.py  isotropic_wave_bak.py  main.py  plotting.py  transparency.py
src/blonder_tinkham_klapwijk_model/config/: __init__.py  app_config.py  atomic_orbital.py  formula_type.py  gap_config.py  single_gap_parameters.py  wave_type.py
src/blonder_tinkham_klapwijk_model/waves/: __init__.py  anisotropic_s.py  anisotropic_wave copy.py  anisotropic_wave.py  d.py  isotropic_s.py  p.py
tests/: __init__.py  test_config.py
tests/data/: input_parameters.toml
