[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project]
name = "blonder-tinkham-klapwijk-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "more-itertools>=10.7.0",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "scipy>=1.16.0",
    "scipy-stubs>=1.16.1.0",
]

[project.scripts]
"btk.x" = "blonder_tinkham_klapwijk_model.main:main"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]
standalone-executable-builders = [
    "shiv>=1.0.8",
]
test-framework = [
    "pytest>=8.4.1",
    "pytest-sugar>=1.0.0",
]

[tool.ruff]
line-length = 88
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["orchestrator"]

[tool.mypy]
follow_imports = "silent"
show_column_numbers = true
ignore_missing_imports = true

#[[tool.uv.index]]
#name = "aliyun-pypi" # Optional name for the index.
#url = "http://mirrors.aliyun.com/pypi/simple"
